# slack-bot

./: get_slack_bot_id.py  gsheet.py  main.py  pyproject.toml
